<resources>
    <string name="app_name">CredStackView</string>

    //chip
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="soup">Soup</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>

    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="beverage">Beverage</string>
    <string name="breakfast">Breakfast</string>
    <string name="saled">Saled</string>
    <string name="appetizer">Appetizer</string>
    <string name="cred_test">CRED TEST</string>
    <string name="cred_is_an_awesome_company_the_ui_of_their_app_is_awesome_i_would_love_to_pe_a_part_of_such_a_great_team_i_ll_be_able_to_learn_a_lot">CRED is an awesome company, the UI of their app is awesome, I would love to pe a part of such a great team, I\'ll be able to learn a lot.</string>
    <string name="order_food">Order Food</string>

    <string name="plates_quantity">Selected Plates : %1$d</string>
    <string name="plates_price">%1$s INR</string>
    <string name="tap_to_close">Tap to close</string>
    <string name="total">Total</string>
    <string name="tap_to_pay">Tap to Pay</string>
    <string name="how_many_plates">How many plates?</string>
    <string name="tap_to_continue">Tap to continue</string>
</resources>